--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>org.inventivetalent.spiget-update</groupId>
+    <groupId>cc.happyareabean.spiget-update</groupId>
     <artifactId>parent</artifactId>
     <packaging>pom</packaging>
     <version>parent-SNAPSHOT</version>
@@ -43,7 +43,7 @@
                             <generateUniqueDependencyReducedPom>false</generateUniqueDependencyReducedPom>
                             <artifactSet>
                                 <includes>
-                                    <include>org.inventivetalent.spiget-update:**</include>
+                                    <include>cc.happyareabean.spiget-update:**</include>
                                 </includes>
                             </artifactSet>
                         </configuration>
@@ -55,10 +55,6 @@
 
     <repositories>
         <repository>
-            <id>inventive-repo</id>
-            <url>https://repo.inventivetalent.org/repository/public/</url>
-        </repository>
-        <repository>
             <id>jitpack.io</id>
             <url>https://jitpack.io</url>
         </repository>
@@ -68,7 +64,7 @@
         </repository>
         <repository>
             <id>spigot-repo</id>
-            <url>https://hub.spigotmc.org/nexus/content/groups/public/</url>
+            <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
         </repository>
     </repositories>
 
